<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_welcome"
        android:text="@string/welcome"
        style="@style/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp"
        />

    <TextView
        android:id="@+id/tv_choose_tool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_tool"
        style="@style/text"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopwatch"
        app:layout_constraintEnd_toStartOf="@id/compass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/compass"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/stopwatch"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/blue1"
            android:padding="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopwatch"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compass"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@id/calculator"
        app:layout_constraintStart_toEndOf="@id/stopwatch"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_tool"
        android:orientation="vertical">
        <!--green2 -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/solar_compass_outline"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/grey2"
            android:padding="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compass"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/compass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/compass"
        app:layout_constraintTop_toTopOf="@id/compass">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/yellow"
            android:padding="15dp"
            android:src="@drawable/solar_calculator_broken" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/calculator"
            android:textSize="19sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/barrier"
        app:barrierMargin="25dp"
        app:constraint_referenced_ids="stopwatch, compass, calculator"
        app:barrierDirection="bottom"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/random"
        app:layout_constraintStart_toStartOf="@id/stopwatch"
        app:layout_constraintEnd_toEndOf="@id/stopwatch"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/random_icon"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/purple"
            android:padding="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clock"
        app:layout_constraintStart_toStartOf="@id/compass"
        app:layout_constraintEnd_toEndOf="@id/compass"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconamoon_clock_thin"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/green2"
            android:padding="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/map"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/calculator"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:orientation="vertical">
        <!--green2 -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/map"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/grey2"
            android:padding="15dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>